<resources>
    <string name="app_name">MSP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MobileSoftware 7조</string>
    <string name="nav_header_subtitle">여재우 김중원</string>
    <string name="user_name">여재우님 김중원님 반갑습니다</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">홈</string>
    <string name="menu_gallery">갤러리</string>
    <string name="menu_slideshow">날짜별 보기</string>
    <string name="inputFoodName">음식 이름</string>
    <string name="inputFoodCount">음식 수량</string>
    <string name="inputFoodFeel">음식 소감</string>
    <string name="inputFoodTime">식사 시간</string>
    <string name="inputFoodInformation">식사 입력하기</string>
    <string name="save_meal">정보 저장</string>
    <string name="take_photo">사진 촬영</string>
    <string name="open_gallery">갤러리 열기</string>
    <string name="open_time">시간 정보 입력</string>
    <string name="open_date">날짜 정보 입력</string>

    <string name="menu_list">식사 리스트</string>
    <string name="menu_calender">식사 캘린더</string>
    <string name="home_banner">MSP 7조 다앱에 오신걸 환영합니다~</string>
    <string name="home_sub_banner">오늘 식사의 칼로리 총량</string>
    <string name="image_explanation">imageView</string>
    <string name="text_explanation">dateView</string>
    <string name="inforName">name</string>
    <string name="inforCount">count</string>
    <string name="inforFeel">feel</string>
    <string name="inforDate">date</string>
    <string name="backButton">뒤로가기</string>
    <string name="chooseTime">[선택]</string>
    <string name="googlemap">현 위치 설정</string>
    <string name="position_show">현 위치 보여주기</string>
    <string name="save_position">위치 저장하기</string>
    <string name="show_position_info">식사 위치 확인</string>
    <string name="message_print">확인하고 싶은 날짜를 선택하세요!</string>
    <string name="check_what_eat">확인하기</string>
    <string name="eat_time">식사시간을 선택해 주세요</string>
    <string name="hint_food_name">드신 음식의 이름을 입력해주세요</string>
    <string name="hint_food_quantity">얼마나 드셨나요?</string>
    <string name="hint_food_review">이 음식은 어떠셨나요?</string>
    <string name="setting_date">날짜 정보</string>
    <string name="ask_eat">오늘은 무엇을 먹었나요?</string>
    <string name="introduce_add">오늘의 식단은 어땟는지 궁금해요!</string>
    <string name="recent_food">최근 섭취한 음식</string>
    <string name="Kcal">총 칼로리량:</string>
    <string name="carbohydrate">탄수화물:</string>
    <string name="protein">단백질:</string>
    <string name="fat">지방:</string>
    <string name="gram">g</string>
</resources>