<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:theme="@style/Theme.MSP.AppBarOverlay"
        app:layout_constraintBottom_toTopOf="@+id/foodImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            app:popupTheme="@style/Theme.MSP.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/foodImageView"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_UploadImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:srcCompat="@drawable/icon_food_input" />

    <Button
        android:id="@+id/btn_UploadImage"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/button_pattern"
        android:drawableStart="@drawable/image_in_btn_camera"
        android:fontFamily="@font/dalseohealingbold"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodImageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="49dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/dalseohealingbold"
        android:gravity="center"
        android:text="@string/inputFoodName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/inputFoodName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="57dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/dalseohealingbold"
        android:gravity="center"
        android:text="@string/inputFoodCount"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/inputFoodCount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="27dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/dalseohealingbold"
        android:gravity="center"
        android:text="@string/inputFoodFeel"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/inputFoodFeel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="75dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/button_pattern"
        android:drawableStart="@drawable/image_in_date"
        android:fontFamily="@font/dalseohealingbold"
        android:onClick="OnClickHandler"
        android:text="@string/open_date"
        app:layout_constraintBottom_toBottomOf="@+id/positionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <EditText
        android:id="@+id/inputFoodName"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="44dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/input_text_style"
        android:ems="10"
        android:fontFamily="@font/dalseohealingbold"
        android:gravity="center|start"
        android:hint="@string/hint_food_name"
        android:inputType="textPersonName"
        app:guidelineUseRtl="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/inputFoodCount"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="44dp"
        android:autoSizeTextType="uniform"
        android:autofillHints=""
        android:background="@drawable/input_text_style"
        android:ems="10"
        android:fontFamily="@font/dalseohealingbold"
        android:gravity="center|start"
        android:hint="@string/hint_food_quantity"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFoodName" />

    <EditText
        android:id="@+id/inputFoodFeel"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="93dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/input_text_style"
        android:ems="10"
        android:fontFamily="@font/dalseohealingbold"
        android:gravity="center|start"
        android:hint="@string/hint_food_review"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFoodName"
        app:layout_constraintVertical_bias="0.793" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/button_pattern"
        android:drawableStart="@drawable/image_in_save"
        android:fontFamily="@font/dalseohealingbold"
        android:onClick="addFoodInformation"
        android:text="@string/save_meal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/positionButton" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="48dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/button_pattern"
        android:drawableStart="@drawable/image_in_btn_gallery"
        android:fontFamily="@font/dalseohealingbold"
        android:gravity="center"
        android:onClick="openGallery"
        android:text="@string/open_gallery"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_UploadImage" />

    <Button
        android:id="@+id/positionButton"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="16dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/button_pattern"
        android:drawableStart="@drawable/image_in_map"
        android:fontFamily="@font/dalseohealingbold"
        android:text="@string/googlemap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/inputFoodFeel"
        app:layout_constraintVertical_bias="0.75"
        android:background="@drawable/button_pattern">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dalseohealingbold"
            android:text="@string/eat_time"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:contentDescription="@string/chooseTime"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            tools:ignore="MissingConstraints"
            android:background="@drawable/button_pattern"></Spinner>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>