<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MSP.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            app:popupTheme="@style/Theme.MSP.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/inforDate"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/dalseohealingbold"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/inforDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <ImageView
        android:id="@+id/showImage"
        android:layout_width="345dp"
        android:layout_height="370dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inforDate"
        app:srcCompat="@drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/showPosInfo"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/dalseohealingbold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/show_position_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/inforDate"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/show_like_talk"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showImage">

        <TextView
            android:id="@+id/show_food_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/dalseohealingbold"
            android:gravity="center"
            android:text="@string/inputFoodName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inforName"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:autoSizeMaxTextSize="@dimen/activity_horizontal_margin"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/dalseohealingbold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/inforName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/show_like_talk"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/show_food_review"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/dalseohealingbold"
            android:gravity="center"
            android:text="@string/inputFoodFeel"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/inforFeel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/dalseohealingbold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/inforFeel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/show_like_talk"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showImage">

        <TextView
            android:id="@+id/show_food_quantity"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/dalseohealingbold"
            android:gravity="center"
            android:text="@string/inputFoodCount"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/inforCount"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:autoSizeMaxTextSize="@dimen/activity_horizontal_margin"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/dalseohealingbold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/inforCount" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>